<resources>
    <string name="app_name">Submission Akhir Aplikasi Android Sederhana</string>
    <string name="logo_app">logo app</string>
    <string name="artist_photo">artist photo</string>
    <string name="artist_name">Artist Name</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="place">Place</string>
    <string name="year_joined">Year Joined</string>
    <string name="total_spotify_stream">Total Spotify Stream :</string>
    <string name="total_youtube_stream">Total Youtube Stream</string>
    <string name="streams_monthly">streams monthly</string>
    <string name="viewers">viewers</string>
    <string name="joined_on">Joined on :</string>
    <string name="total">Total</string>
    <string name="followers">Total Followers</string>
    <string name="biography">Biography</string>
    <string name="photo_image">photo image</string>
    <string name="about">About</string>
    <string name="me">me</string>
    <string name="my_name">Dimas Fahrul</string>
    <string name="my_email">dfahrul07@gmail.com</string>
    <string-array name="data_photo">
        <item>@drawable/aspyer</item>
        <item>@drawable/blinders</item>
        <item>@drawable/brooks</item>
        <item>@drawable/dubvision</item>
        <item>@drawable/julianjordan</item>
        <item>@drawable/martingarrix</item>
        <item>@drawable/matissesadko</item>
        <item>@drawable/mesto</item>
        <item>@drawable/thirdparty</item>
        <item>@drawable/threelau</item>
        <item>@drawable/tvnoise</item>
    </string-array>
    <string-array name="more_photo1">
        <item>@drawable/aspyer1</item>
        <item>@drawable/blinders1</item>
        <item>@drawable/brooks1</item>
        <item>@drawable/dubvision1</item>
        <item>@drawable/julianjordan1</item>
        <item>@drawable/martingarrix1</item>
        <item>@drawable/matissesadko1</item>
        <item>@drawable/mesto1</item>
        <item>@drawable/thirdparty1</item>
        <item>@drawable/threelau1</item>
        <item>@drawable/tvnoise1</item>
    </string-array>
    <string-array name="more_photo2">
        <item>@drawable/aspyer2</item>
        <item>@drawable/blinders2</item>
        <item>@drawable/brooks2</item>
        <item>@drawable/dubvision2</item>
        <item>@drawable/julianjordan2</item>
        <item>@drawable/martingarrix2</item>
        <item>@drawable/matissesadko2</item>
        <item>@drawable/mesto2</item>
        <item>@drawable/thirdparty2</item>
        <item>@drawable/threelau2</item>
        <item>@drawable/tvnoise2</item>
    </string-array>
    <string-array name="more_photo3">
        <item>@drawable/aspyer3</item>
        <item>@drawable/blinders3</item>
        <item>@drawable/brooks3</item>
        <item>@drawable/dubvision3</item>
        <item>@drawable/julianjordan3</item>
        <item>@drawable/martingarrix3</item>
        <item>@drawable/matissesadko3</item>
        <item>@drawable/mesto3</item>
        <item>@drawable/thirdparty3</item>
        <item>@drawable/threelau3</item>
        <item>@drawable/tvnoise3</item>
    </string-array>
    <string-array name="data_name">
        <item>Aspyer</item>
        <item>Blinders</item>
        <item>Brooks</item>
        <item>DubVision</item>
        <item>Julian Jordan</item>
        <item>Martin Garrix</item>
        <item>Matisse Sadko</item>
        <item>Mesto</item>
        <item>Third ≡ Party</item>
        <item>3lau</item>
        <item>TV Noise</item>
    </string-array>
    <string-array name="data_place">
        <item>Russia</item>
        <item>Poland</item>
        <item>Netherlands</item>
        <item>Netherlands</item>
        <item>Netherlands</item>
        <item>Russia</item>
        <item>Netherlands</item>
        <item>United Kingdom</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Netherlands</item>
    </string-array>
</resources>