<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_detail_photo"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/tv_detail_artist_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.HeadlineMedium.Bold"
                        android:text="@string/artist_name" />

                    <TextView
                        android:id="@+id/tv_detail_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.TitleMedium"
                        android:layout_marginBottom="12dp"
                        android:text="@string/place" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.TitleMedium.Gray"
                        android:text="@string/joined_on" />

                    <TextView
                        android:id="@+id/tv_detail_joined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.TitleMedium"
                        android:layout_marginBottom="12dp"
                        android:text="@string/year_joined" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="12dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/spotify" />

                        <TextView
                            android:id="@+id/tv_detail_total_spotify_stream"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            style="@style/TextContent.TitleMedium.Bold"
                            android:text="@string/total" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextContent.TitleMedium"
                            android:text="@string/streams_monthly" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/youtube" />

                        <TextView
                            android:id="@+id/tv_detail_total_youtube_stream"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            style="@style/TextContent.TitleMedium.Bold"
                            android:text="@string/total" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextContent.TitleMedium"
                            android:text="@string/viewers" />
                    </TableRow>

                </LinearLayout>

            </TableRow>

        </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginVertical="16dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_detail_more_photo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/img_detail_more_photo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/img_detail_more_photo3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                tools:src="@tools:sample/avatars" />

        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextContent.TitleMedium"
            android:text="@string/followers" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginVertical="8dp">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/spotify" />

                <TextView
                    android:id="@+id/tv_detail_total_spotify_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginHorizontal="6dp"
                    android:text="@string/total" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/youtube" />

                <TextView
                    android:id="@+id/tv_detail_total_youtube_subscribers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginHorizontal="6dp"
                    android:text="@string/total" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/instagram" />

                <TextView
                    android:id="@+id/tv_detail_total_instagram_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginHorizontal="6dp"
                    android:text="@string/total" />

            </TableRow>

        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            style="@style/TextContent.TitleMedium"
            android:text="@string/biography" />

        <TextView
            android:id="@+id/tv_detail_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextContent.BodyMedium"
            android:text="@string/deskripsi" />

    </LinearLayout>

</ScrollView>